@@ -7705,7 +7705,6 @@ WandExport MagickBooleanType MogrifyImageList(ImageInfo *image_info,
       (*images)->filename);
   if ((argc <= 0) || (*argv == (char *) NULL))
     return(MagickTrue);
-  PageIndexImageList(*images);
   mogrify_info=CloneImageInfo(image_info);
   quantize_info=AcquireQuantizeInfo(mogrify_info);
   channel=mogrify_info->channel;
@@ -8047,7 +8046,6 @@ WandExport MagickBooleanType MogrifyImageList(ImageInfo *image_info,
               *fx_image;
 
             (void) SyncImagesSettings(mogrify_info,*images);
-            PageIndexImageList(*images);
             fx_image=FxImageChannel(*images,channel,argv[i+1],exception);
             if (fx_image == (Image *) NULL)
               {
@@ -8691,12 +8689,11 @@ WandExport MagickBooleanType MogrifyImages(ImageInfo *image_info,
     return(MagickTrue);
   (void) SetImageInfoProgressMonitor(image_info,(MagickProgressMonitor) NULL,
     (void *) NULL);
+  mogrify_images=NewImageList();
+  number_images=GetImageListLength(*images);
   status=0;
   if (post == MagickFalse)
     status&=MogrifyImageList(image_info,argc,argv,images,exception);
-  PageIndexImageList(*images);
-  number_images=(*images)->page_total;
-  mogrify_images=NewImageList();
   for (i=0; i < (ssize_t) number_images; i++)
   {
     image=RemoveFirstImageFromList(images);
